Add users and auth

--- a/resources/views/admin/index.html
+++ b/resources/views/admin/index.html
@@ -7,6 +7,7 @@
         
         <link rel="shortcut icon" href="/assets/favicon.ico">
         <link href="/assets/css/bootstrap.min.css" rel="stylesheet" type="text/css" />
+        <link href="/assets/css/style.css" rel="stylesheet" type="text/css" />
         
     </head>
     <body>
@@ -20,6 +21,7 @@
                
             <div class="list-group">
                 <a class="list-group-item" href="/admin/articles">Articles</a>
+                <a class="list-group-item" href="/admin/users">Users</a>
             </div>
         </div>
         
