--- a/resources/views/admin/users/profile.html
+++ b/resources/views/admin/users/profile.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>{{ article.title }}</title>
+        <title>{{ User.title }}</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         
@@ -10,10 +10,10 @@
         
     </head>
     <body>
-        <h1>{{ article.title }}</h1>
+        <h1>{{ User.title }}</h1>
         
         <div>
-            {{{ article.body }}}
+            {{{ User.body }}}
         </div>
         
     </body>
