--- a/resources/views/index.html
+++ b/resources/views/index.html
@@ -7,13 +7,24 @@
         
         <link rel="shortcut icon" href="/assets/favicon.ico">
         <link href="/assets/css/bootstrap.min.css" rel="stylesheet" type="text/css" />
+        <link href="/assets/css/style.css" rel="stylesheet" type="text/css" />
+        
     </head>
     <body>
         
         <div class="container">
             <h1>{{ title }}</h1>
-        
+            
+            {{#if error }}
+            <div class="alert alert-danger">{{ error }}</div>
+            {{/if }}
+            
+            {{#if logged }}
             <a href="/admin">Admin</a>
+            <a href="/session/logout">Logout</a>
+            {{ else }}
+            <a href="/session/login">Login</a>
+            {{/if }}
             
         </div>
         
