--- a/resources/views/admin/index.html
+++ b/resources/views/admin/index.html
@@ -15,9 +15,14 @@
         <div class="container" id="app">
             <h1>Admin</h1>
             
-            <a href="/" style="margin-bottom: 10px"
-               class="btn btn-primary btm-sm pull-right">Homepage</a>
-            <div class="clearfix"></div>
+            <div class="row">
+                <div class="col-md-12">
+                    <a href="/session/logout"
+                        class="btn btn-danger btm-sm pull-right">Logout</a>
+                     <a href="/"
+                        class="btn btn-primary btm-sm pull-right">Homepage</a>
+                </div>
+            </div>
                
             <div class="list-group">
                 <a class="list-group-item" href="/admin/articles">Articles</a>
