--- a/resources/views/admin/users/form.html
+++ b/resources/views/admin/users/form.html
@@ -1,170 +1,84 @@
-<!DOCTYPE html>
-<html>
-    <head>
-        <title>Edit User</title>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        
-        <link rel="shortcut icon" href="/assets/favicon.ico">
-        <link href="/assets/css/bootstrap.min.css" rel="stylesheet" type="text/css" />
-        <link href="/assets/css/style.css" rel="stylesheet" type="text/css" />
-        <style>
-            .thumbnail { max-height: 240px; max-width: 240px; }
-        </style>
 
-    </head>
-    <body>
-        <div class="container" id="app">
-            <h1>Edit User</h1>
-            
-            <div class="pull-right">
-                <button v-bind:disabled="processing"
-                        v-on:click="save"
-                        class="btn btn-primary btn-sm">Save
-                </button>
-                <a class="btn btn-warning btn-sm" href="/admin/users">Back</a>
-            </div>
-            <div class="clearfix" style="margin-top: 10px"></div>
+<div class="container" id="app">
+    <h1>Edit User</h1>
 
-            <form action="/admin/users/save" method="post" v-on:submit.prevent="save">
+    <div class="pull-right">
+        <button v-bind:disabled="processing"
+                v-on:click="save"
+                class="btn btn-primary btn-sm">Save
+        </button>
+        <a class="btn btn-warning btn-sm" href="/admin/users">Back</a>
+    </div>
+    <div class="clearfix" style="margin-top: 10px"></div>
 
-                <input type="hidden" name="id" value="" v-model="user.id" />
-                
-                <div class="row">
-                    <div class="col-md-8">
-                        
-                        <div class="form-group">
-                            <label>Username</label>
-                            <input class="form-control" 
-                                   v-model="user.username"
-                                   type="text" name="username" value="" />
-                        </div>
+    <form action="" method="post" v-on:submit.prevent="save">
 
-                        <div class="form-group">
-                            <label>Email</label>
-                            <input class="form-control" 
-                                   v-model="user.email"
-                                   type="text" name="email" value="" />
-                        </div>
+        <input type="hidden" name="id" value="" v-model="user.id" />
 
-                        <div class="form-group">
-                            <label>Password</label>
-                            <input class="form-control" 
-                                   v-model="user.password"
-                                   type="password" name="password" value="" />
-                        </div>
+        <div class="row">
+            <div class="col-md-8">
 
-                        <div class="form-group">
-                            <label>Confirm Password</label>
-                            <input class="form-control" 
-                                   v-model="user.password_confirm"
-                                   type="password" name="password_confirm" value="" />
-                        </div>
-                    </div>
-                    <div class="col-md-4">
-                        
-                        <label>Avatar</label>
-                        <div class="clearfix"></div>
-                        <div class="btn-group">
-                            <label class="btn btn-default btn-file">
-                                Browse Image
-                                <input type="file" name="image_upload" 
-                                       v-on:change="selectImage"
-                                       style="display: none;">
-                            </label>
-                            <button class="btn btn-danger" v-show="user.image || user.image_upload" 
-                                    v-on:click.prevent="removeImage">Remove image</button>
-                        </div>
-                        <div v-show="getAvatarUrl">
-                            <img class="thumbnail" v-bind:src="getAvatarUrl" />
-                        </div>
-                        <div v-show="user.image_upload">
-                            <img class="thumbnail" v-bind:src="user.image_upload" />
-                        </div>
-                        <input type="hidden" name="image" v-model="user.image" />
-                        
-                    </div>
+                <div class="form-group">
+                    <label>Username</label>
+                    <input class="form-control" 
+                           v-model="user.username"
+                           type="text" name="username" value="" />
                 </div>
-                <div class="clearfix" style="margin-top: 10px"></div>
-                
-                <div class="alert alert-success" v-show="success" v-cloak>Saved</div>
-                <div class="alert alert-danger" v-show="error" v-text="error" v-cloak></div>
 
-                <button type="submit" 
-                        v-bind:disabled="processing"
-                        class="btn btn-primary btn-sm">Save
-                </button>
-                <a class="btn btn-warning btn-sm" href="/admin/users">Back</a>
-            </form>
+                <div class="form-group">
+                    <label>Email</label>
+                    <input class="form-control" 
+                           v-model="user.email"
+                           type="text" name="email" value="" />
+                </div>
+
+                <div class="form-group">
+                    <label>Password</label>
+                    <input class="form-control" 
+                           v-model="user.password"
+                           type="password" name="password" value="" />
+                </div>
+
+                <div class="form-group">
+                    <label>Confirm Password</label>
+                    <input class="form-control" 
+                           v-model="user.password_confirm"
+                           type="password" name="password_confirm" value="" />
+                </div>
+            </div>
+            <div class="col-md-4">
+
+                <label>Avatar</label>
+                <div class="clearfix"></div>
+                <div class="btn-group">
+                    <label class="btn btn-default btn-file">
+                        Browse Image
+                        <input type="file" name="image_upload" 
+                               v-on:change="selectImage"
+                               style="display: none;">
+                    </label>
+                    <button class="btn btn-danger" v-show="user.image || user.image_upload" 
+                            v-on:click.prevent="removeImage">Remove image</button>
+                </div>
+                <div v-show="getAvatarUrl">
+                    <img class="thumbnail" v-bind:src="getAvatarUrl" />
+                </div>
+                <div v-show="user.image_upload">
+                    <img class="thumbnail" v-bind:src="user.image_upload" />
+                </div>
+                <input type="hidden" name="image" v-model="user.image" />
+
+            </div>
         </div>
-        
-        <script src="/assets/js/jquery.min.js" type="text/javascript"></script>
-        <script src="/assets/js/bootstrap.min.js" type="text/javascript"></script>
-        <script src="/assets/js/vue.js"></script>
-        <script src="/assets/js/vue-resource.js"></script>
-        <script>
+        <div class="clearfix" style="margin-top: 10px"></div>
 
-            var client = new Vue({
-                el: '#app',
+        <div class="alert alert-success" v-show="success" v-cloak>Saved</div>
+        <div class="alert alert-danger" v-show="error" v-text="error" v-cloak></div>
 
-                data: {
-                    user: {
-                        id: '{{ user.id }}',
-                        username: '{{ user.username }}',
-                        email: '{{ user.email }}',
-                        password: '',
-                        image: '{{ user.image }}',
-                        image_upload: ''
-                    },
-                    processing: false,
-                    success: false,
-                    error: false
-                },
-
-                methods: {
-                    save: function(e) {
-                        
-                        var v = this;
-                        v.processing = true;
-                        v.success = false;
-                        v.error = false;
-                        
-                        v.$http.post("/admin/users/save", v.user)
-                        .then((res) => {
-                            v.processing = false;
-                            if (res.body && res.body.success) {
-                                v.success = true;
-                                window.location.href = "/admin/users";
-                            } else {
-                                v.error = res.body.error;
-                            }
-                        });
-                    },
-                    selectImage: function(e) {
-                        var v = this;
-                        if (e.target.files.length) {
-                            var reader = new FileReader();
-                            reader.onload = (re) => {
-                                v.user.image_upload = re.target.result;
-                            };
-                            reader.readAsDataURL(e.target.files[0]);
-                        }
-                    },
-                    removeImage: function (e) {
-                        this.user.image = '';
-                        this.user.image_upload = '';
-                    }
-                },
-                
-                computed: {
-                    getAvatarUrl: function () {
-                        return this.user.image !== '' ? 
-                            '/avatar/' + this.user.id + '/' + this.user.image
-                            : false;
-                    }
-                }
-            });
-            
-        </script>
-    </body>
-</html>
+        <button type="submit" 
+                v-bind:disabled="processing"
+                class="btn btn-primary btn-sm">Save
+        </button>
+        <a class="btn btn-warning btn-sm" href="/admin/users">Back</a>
+    </form>
+</div>
