--- a/resources/views/admin/users/form.html
+++ b/resources/views/admin/users/form.html
@@ -1,4 +1,4 @@
-
+{{#partial "content" }}
 <div class="container" id="app">
     <h1>Edit User</h1>
 
@@ -82,3 +82,27 @@
         <a class="btn btn-warning btn-sm" href="/admin/users">Back</a>
     </form>
 </div>
+{{/partial }}
+
+{{#partial "scripts" }}
+<script src="/assets/js/jquery.min.js" type="text/javascript"></script>
+<script src="/assets/js/bootstrap.min.js" type="text/javascript"></script>
+<script src="/assets/js/vue.js"></script>
+<script src="/assets/js/vue-resource.js"></script>
+<script src="/assets/js/admin/users/form.js"></script>
+<script>
+    form.data.action = '/admin/users/save';
+    form.data.redirect = '/admin/users';
+    form.data.avatar_uri = '/avatar/';
+    form.data.user = {
+        id: '{{ user.id }}',
+        username: '{{ user.username }}',
+        email: '{{ user.email }}',
+        password: '',
+        image: '{{ user.image }}',
+        image_upload: ''
+    };
+    var vm = new Vue(form);
+</script>
+{{/partial }}
+{{> layout }}
