--- a/resources/views/admin/users/index.html
+++ b/resources/views/admin/users/index.html
@@ -1,5 +1,4 @@
-
-
+{{#partial "content" }}
 <div class="container" id="app">
     <h1>Admin Users</h1>
 
@@ -40,4 +39,16 @@
         </tbody>
     </table>
 </div>
+{{/partial }}
 
+{{#partial "scripts" }}
+<script src="/assets/js/jquery.min.js" type="text/javascript"></script>
+<script src="/assets/js/bootstrap.min.js" type="text/javascript"></script>
+<script src="/assets/js/vue.js"></script>
+<script src="/assets/js/vue-resource.js"></script>
+<script src="/assets/js/admin/users/index.js"></script>
+<script>
+    var vm = new Vue(index);
+</script>
+{{/partial }}
+{{> layout }}
