Add vali admin theme

--- a/resources/views/admin/index.html
+++ b/resources/views/admin/index.html
@@ -1,20 +1,76 @@
-{{#partial "content" }}        
-<div class="container" id="app">
-    <h1>Admin</h1>
-
-    <div class="row">
-        <div class="col-md-12">
-            <a href="/auth/logout"
-                class="btn btn-danger btm-sm pull-right">Logout</a>
-             <a href="/"
-                class="btn btn-primary btm-sm pull-right">Homepage</a>
+{{#partial "content" }}
+<div class="content-wrapper" id="app">
+    <div class="page-title">
+        <div>
+            <h1><i class="fa fa-pie-chart"></i> Dashboard</h1>
+            <p>Application summary</p>
+        </div>
+        <div>
+            <ul class="breadcrumb">
+                <li><i class="fa fa-home fa-lg"></i></li>
+                <li><a href="/admin">dashboard</a></li>
+            </ul>
         </div>
     </div>
+    <div class="row">
+        <div class="col-md-12">
+            <div class="card">
+                <h3 class="card-title">Dashboard</h3>
 
-    <div class="list-group">
-        <a class="list-group-item" href="/admin/articles">Articles</a>
-        <a class="list-group-item" href="/admin/users">Users</a>
+            </div>
+        </div>
     </div>
 </div>
+{{/partial }}
+{{#partial "scripts" }}
+<script type="text/javascript" src="/assets/admin/js/plugins/chart.js"></script>
+<script type="text/javascript" src="/assets/admin/js/plugins/jquery.vmap.min.js"></script>
+<script type="text/javascript" src="/assets/admin/js/plugins/jquery.vmap.world.js"></script>
+<script type="text/javascript" src="/assets/admin/js/plugins/jquery.vmap.sampledata.js"></script>
+<script type="text/javascript">
+$(document).ready(function () {
+var data = {
+    labels: ["January", "February", "March", "April", "May"],
+    datasets: [
+        {
+            label: "My First dataset",
+            fillColor: "rgba(220,220,220,0.2)",
+            strokeColor: "rgba(220,220,220,1)",
+            pointColor: "rgba(220,220,220,1)",
+            pointStrokeColor: "#fff",
+            pointHighlightFill: "#fff",
+            pointHighlightStroke: "rgba(220,220,220,1)",
+            data: [65, 59, 80, 81, 56]
+        },
+        {
+            label: "My Second dataset",
+            fillColor: "rgba(151,187,205,0.2)",
+            strokeColor: "rgba(151,187,205,1)",
+            pointColor: "rgba(151,187,205,1)",
+            pointStrokeColor: "#fff",
+            pointHighlightFill: "#fff",
+            pointHighlightStroke: "rgba(151,187,205,1)",
+            data: [28, 48, 40, 19, 86]
+        }
+    ]
+};
+var ctxl = $("#lineChartDemo").get(0).getContext("2d");
+var lineChart = new Chart(ctxl).Line(data);
+
+var map = $('#demo-map');
+map.vectorMap({
+    map: 'world_en',
+    backgroundColor: '#fff',
+    color: '#333',
+    hoverOpacity: 0.7,
+    selectedColor: '#666666',
+    enableZoom: true,
+    showTooltip: true,
+    scaleColors: ['#C8EEFF', '#006491'],
+    values: sample_data,
+    normalizeFunction: 'polynomial'
+});
+});
+</script>
 {{/partial }}
 {{> layout }}
