--- a/resources/views/layout.html
+++ b/resources/views/layout.html
@@ -9,9 +9,9 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         
-        <link rel="shortcut icon" href="/assets/favicon.ico">
-        <link href="/assets/css/bootstrap.min.css" rel="stylesheet" type="text/css" />
-        <link href="/assets/css/style.css" rel="stylesheet" type="text/css" />
+        <link href="/assets/default/favicon.ico" rel="shortcut icon">
+        <link href="/assets/default/css/bootstrap.min.css" rel="stylesheet" type="text/css" />
+        <link href="/assets/default/css/style.css" rel="stylesheet" type="text/css" />
         
         {{#block "styles" }}
         {{/block }}
