--- a/resources/views/admin/articles/display.html
+++ b/resources/views/admin/articles/display.html
@@ -1,20 +1,30 @@
-<!DOCTYPE html>
-<html>
-    <head>
-        <title>{{ article.title }}</title>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        
-        <link href="/assets/css/bootstrap.min.css" rel="stylesheet" type="text/css" />
-        <link href="/assets/css/style.css" rel="stylesheet" type="text/css" />
-        
-    </head>
-    <body>
-        <h1>{{ article.title }}</h1>
-        
+{{#partial "content" }}
+<div class="content-wrapper" id="app">
+    <div class="page-title">
         <div>
-            {{{ article.body }}}
+            <h1><i class="fa fa-pie-chart"></i> View Article</h1>
+            <p>View blog article</p>
         </div>
-        
-    </body>
-</html>
+        <div>
+            <ul class="breadcrumb">
+                <li><i class="fa fa-home fa-lg"></i></li>
+                <li><a href="/admin/articles">view article</a></li>
+            </ul>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-md-12">
+            <div class="card">
+                <h3 class="card-title">View Article</h3>
+                
+                <h4>{{ article.title }}</h4>
+
+                <div>
+                    {{{ article.body }}}
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+{{/partial }}
+{{> layout }}
