--- a/resources/views/admin/articles/form.html
+++ b/resources/views/admin/articles/form.html
@@ -1,56 +1,70 @@
 {{#partial "content" }}
-<div class="container" id="app">
-    <h1>Edit Article</h1>
-
-    <div class="pull-right" style="margin-bottom: 10px;">
-        <button v-bind:disabled="processing"
-                v-on:click="save"
-                class="btn btn-primary btn-sm">Save
-        </button>
-        <a class="btn btn-warning btn-sm" href="/admin/articles">Back</a>
+<div class="content-wrapper" id="app">
+    <div class="page-title">
+        <div>
+            <h1><i class="fa fa-pie-chart"></i> Edit Article</h1>
+            <p>Manage blog articles</p>
+        </div>
+        <div>
+            <ul class="breadcrumb">
+                <li><i class="fa fa-home fa-lg"></i></li>
+                <li><a href="/admin/articles">articles</a></li>
+            </ul>
+        </div>
     </div>
+    <div class="row">
+        <div class="col-md-12">
+            <div class="card">
+                <h3 class="card-title">Edit Article</h3>
 
-    <form action="" method="post" v-on:submit.prevent="save">
+                <div class="pull-right" style="margin-bottom: 10px;">
+                    <button v-bind:disabled="processing"
+                            v-on:click="save"
+                            class="btn btn-primary btn-sm">Save
+                    </button>
+                    <a class="btn btn-warning btn-sm" href="/admin/articles">Back</a>
+                </div>
 
-        <input type="hidden" name="id" value="" v-model="article.id" />
+                <form action="" method="post" v-on:submit.prevent="save">
 
-        <div class="form-group">
-            <label>Title</label>
-            <input class="form-control" type="text" name="title" value="" v-model="article.title" />
+                    <input type="hidden" name="id" value="" v-model="article.id" />
+
+                    <div class="form-group">
+                        <label>Title</label>
+                        <input class="form-control" type="text" name="title" value="" v-model="article.title" />
+                    </div>
+
+                    <div class="form-group">
+                        <label>Body</label>
+                        <textarea class="form-control" name="body" v-model="article.body"></textarea>
+                    </div>
+
+                    <div class="alert alert-success" v-show="success" v-cloak>Saved</div>
+                    <div class="alert alert-danger" v-show="error" v-text="error" v-cloak></div>
+
+                    <button type="submit" 
+                            v-bind:disabled="processing"
+                            class="btn btn-primary btn-sm">Save
+                    </button>
+                    <a class="btn btn-warning btn-sm" href="/admin/articles">Back</a>
+                </form>
+            </div>
         </div>
-
-        <div class="form-group">
-            <label>Body</label>
-            <textarea class="form-control" name="body" v-model="article.body"></textarea>
-        </div>
-
-        <div class="alert alert-success" v-show="success" v-cloak>Saved</div>
-        <div class="alert alert-danger" v-show="error" v-text="error" v-cloak></div>
-
-        <button type="submit" 
-                v-bind:disabled="processing"
-                class="btn btn-primary btn-sm">Save
-        </button>
-        <a class="btn btn-warning btn-sm" href="/admin/articles">Back</a>
-    </form>
+    </div>
 </div>
 {{/partial }}
 
 {{#partial "scripts" }}
-<script src="/assets/js/jquery.min.js" type="text/javascript"></script>
-<script src="/assets/js/bootstrap.min.js" type="text/javascript"></script>
-<script src="/assets/js/vue.js"></script>
-<script src="/assets/js/vue-resource.js"></script>
-<script src="/assets/js/admin/articles/form.js"></script>
+<script src="/assets/admin/js/articles/form.js"></script>
 <script>
-    form.data.action = '/admin/articles/save';
-    form.data.redirect = '/admin/articles';
-    form.data.article = {
-        id: '{{ article.id }}',
-        title: '{{ article.title }}',
-        body: '{{ article.body }}'
-    };
-    var vm = new Vue(form);
+form.data.action = '/admin/articles/save';
+form.data.redirect = '/admin/articles';
+form.data.article = {
+    id: '{{ article.id }}',
+    title: '{{ article.title }}',
+    body: '{{ article.body }}'
+};
+var vm = new Vue(form);
 </script>
 {{/partial }}
 
