--- a/resources/views/admin/articles/index.html
+++ b/resources/views/admin/articles/index.html
@@ -1,45 +1,56 @@
 {{#partial "content" }}
-<div class="container" id="app">
-    <h1>Admin Articles</h1>
+<div class="content-wrapper" id="app">
+    <div class="page-title">
+        <div>
+            <h1><i class="fa fa-pie-chart"></i> Articles</h1>
+            <p>Manage blog articles</p>
+        </div>
+        <div>
+            <ul class="breadcrumb">
+                <li><i class="fa fa-home fa-lg"></i></li>
+                <li><a href="/admin/articles">articles</a></li>
+            </ul>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-md-12">
+            <div class="card">
+                <h3 class="card-title">Articles</h3>
 
-    <a href="/admin" 
-       class="btn btn-success btm-sm">Back</a>
-
-    <a href="/admin/articles/form/0" 
-       style="margin-bottom: 10px"
-       v-bind:disabled="processing"
-       class="btn btn-primary btm-sm pull-right">New</a>
-    <table class="table table-striped">
-        <thead>
-            <tr><th>ID</th><th>Title</th><th style="width: 130px"></th></tr>
-        </thead>
-        <tbody>
-            {{#each articles }}
-            <tr>
-                <td>{{ id }}</td>
-                <td>{{ title }}</td>
-                <td>
-                    <a class="btn btn-warning btn-sm"
-                       v-bind:disabled="processing"
-                       href="/admin/articles/form/{{ id }}">edit</a>
-                    &nbsp;
-                    <a class="btn btn-danger btn-sm"
-                       v-bind:disabled="processing"
-                       v-on:click.prevent="del"
-                       href="/admin/articles/del/{{ id }}">del</a>
-                </td>
-            </tr>
-            {{/each }}
-        </tbody>
-    </table>
+                <a href="/admin/articles/form/0" 
+                   style="margin-bottom: 10px"
+                   v-bind:disabled="processing"
+                   class="btn btn-primary btm-sm pull-right">New</a>
+                <table class="table table-striped">
+                    <thead>
+                        <tr><th>ID</th><th>Title</th><th style="width: 130px"></th></tr>
+                    </thead>
+                    <tbody>
+                        {{#each articles }}
+                        <tr>
+                            <td>{{ id }}</td>
+                            <td>{{ title }}</td>
+                            <td>
+                                <a class="btn btn-warning btn-sm"
+                                   v-bind:disabled="processing"
+                                   href="/admin/articles/form/{{ id }}">edit</a>
+                                &nbsp;
+                                <a class="btn btn-danger btn-sm"
+                                   v-bind:disabled="processing"
+                                   v-on:click.prevent="del"
+                                   href="/admin/articles/del/{{ id }}">del</a>
+                            </td>
+                        </tr>
+                        {{/each }}
+                    </tbody>
+                </table>
+            </div>
+        </div>
+    </div>
 </div>
 {{/partial }}
 {{#partial "scripts" }}
-<script src="/assets/js/jquery.min.js" type="text/javascript"></script>
-<script src="/assets/js/bootstrap.min.js" type="text/javascript"></script>
-<script src="/assets/js/vue.js"></script>
-<script src="/assets/js/vue-resource.js"></script>
-<script src="/assets/js/admin/articles/index.js"></script>
+<script src="/assets/admin/js/articles/index.js"></script>
 <script>
     var vm = new Vue(index);
 </script>
