--- a/resources/views/admin/layout.html
+++ b/resources/views/admin/layout.html
@@ -1,26 +1,106 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         
         {{#block "title" }}
         <title>Admin Users</title>
         {{/block }}
         
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link href="/assets/default/favicon.ico" rel="shortcut icon">
+        <link href="/assets/admin/css/main.css" rel="stylesheet" type="text/css" />
         
-        <link rel="shortcut icon" href="/assets/favicon.ico">
-        <link href="/assets/css/bootstrap.min.css" rel="stylesheet" type="text/css" />
-        <link href="/assets/css/style.css" rel="stylesheet" type="text/css" />
+        <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries-->
+        <!--if lt IE 9
+        script(src='https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js')
+        script(src='https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js')
+        -->
         
     </head>
-    <body>
-        
+    <body class="sidebar-mini fixed">
+      <div class="wrapper">
+        <!-- Navbar-->
+        <header class="main-header hidden-print"><a class="logo" href="/admin">NodeAdmin</a>
+          <nav class="navbar navbar-static-top">
+            <!-- Sidebar toggle button--><a class="sidebar-toggle" href="#" data-toggle="offcanvas"></a>
+            <!-- Navbar Right Menu-->
+            <div class="navbar-custom-menu">
+              <ul class="top-nav">
+                <!--Notification Menu-->
+                <li class="dropdown notification-menu"><a class="dropdown-toggle" href="#" data-toggle="dropdown" aria-expanded="false"><i class="fa fa-bell-o fa-lg"></i></a>
+                  <ul class="dropdown-menu">
+                    <li class="not-head">You have 2 new notifications.</li>
+                    <li><a class="media" href="javascript:;"><span class="media-left media-icon"><span class="fa-stack fa-lg"><i class="fa fa-circle fa-stack-2x text-primary"></i><i class="fa fa-envelope fa-stack-1x fa-inverse"></i></span></span>
+                        <div class="media-body"><span class="block">Lisa sent you a mail</span><span class="text-muted block">2min ago</span></div></a></li>
+                    <li><a class="media" href="javascript:;"><span class="media-left media-icon"><span class="fa-stack fa-lg"><i class="fa fa-circle fa-stack-2x text-danger"></i><i class="fa fa-hdd-o fa-stack-1x fa-inverse"></i></span></span>
+                        <div class="media-body"><span class="block">Server Not Working</span><span class="text-muted block">2min ago</span></div></a></li>
+                    <li><a class="media" href="javascript:;"><span class="media-left media-icon"><span class="fa-stack fa-lg"><i class="fa fa-circle fa-stack-2x text-success"></i><i class="fa fa-money fa-stack-1x fa-inverse"></i></span></span>
+                        <div class="media-body"><span class="block">Transaction xyz complete</span><span class="text-muted block">2min ago</span></div></a></li>
+                    <li class="not-footer"><a href="#">See all notifications.</a></li>
+                  </ul>
+                </li>
+                <!-- User Menu-->
+                <li class="dropdown"><a class="dropdown-toggle" href="#" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><i class="fa fa-user fa-lg"></i></a>
+                  <ul class="dropdown-menu settings-menu">
+                    <li><a href="/admin/users/profile"><i class="fa fa-user fa-lg"></i> Profile</a></li>
+                    <li><a href="/auth/logout"><i class="fa fa-sign-out fa-lg"></i> Logout</a></li>
+                  </ul>
+                </li>
+              </ul>
+            </div>
+          </nav>
+        </header>
+        <!-- Side-Nav-->
+        <aside class="main-sidebar hidden-print">
+          <section class="sidebar">
+            <div class="user-panel">
+              <div class="pull-left image">
+                  
+                  {{#if logged }}
+                  <img class="img-circle" src="https://s3.amazonaws.com/uifaces/faces/twitter/jsa/48.jpg" alt="User Image">
+                  {{ else }}
+                  <img class="img-circle" src="/assets/admin/images/user.png" alt="User Image">
+                  {{/if }}
+                  
+              </div>
+              <div class="pull-left info">
+                <p>John Doe</p>
+                <p class="designation">Frontend Developer</p>
+              </div>
+            </div>
+            <!-- Sidebar Menu-->
+            <ul class="sidebar-menu">
+              <li class="active">
+                  <a href="/admin"><i class="fa fa-dashboard"></i><span>Dashboard</span></a>
+              </li>
+              <li><a href="/admin/articles"><i class="fa fa-pie-chart"></i><span>Articles</span></a></li>
+              <li class="treeview"><a href="#"><i class="fa fa-laptop"></i><span>System</span><i class="fa fa-angle-right"></i></a>
+                <ul class="treeview-menu">
+                  <li><a href="/admin/users"><i class="fa fa-circle-o"></i> Users</a></li>
+                </ul>
+              </li>
+            </ul>
+          </section>
+        </aside>
+
         {{#block "content" }}
         {{/block }}
+
+      </div>
+      
+        <!-- Javascripts-->
+        <script src="/assets/admin/js/jquery-2.1.4.min.js"></script>
+        <script src="/assets/admin/js/essential-plugins.js"></script>
+        <script src="/assets/admin/js/bootstrap.min.js"></script>
+        <script src="/assets/admin/js/plugins/pace.min.js"></script>
+        <script src="/assets/default/js/vue.js"></script>
+        <script src="/assets/default/js/vue-resource.js"></script>
+        <script src="/assets/admin/js/admin.js"></script>
         
-        {{#block "scripts" }}
-        {{/block }}
+      {{#block "scripts" }}
+      {{/block }}
         
     </body>
 </html>
