--- a/resources/views/admin/users/form.html
+++ b/resources/views/admin/users/form.html
@@ -1,108 +1,123 @@
 {{#partial "content" }}
-<div class="container" id="app">
-    <h1>Edit User</h1>
-
-    <div class="pull-right">
-        <button v-bind:disabled="processing"
-                v-on:click="save"
-                class="btn btn-primary btn-sm">Save
-        </button>
-        <a class="btn btn-warning btn-sm" href="/admin/users">Back</a>
+<div class="content-wrapper" id="app">
+    <div class="page-title">
+        <div>
+            <h1><i class="fa fa-pie-chart"></i> Edit Users</h1>
+            <p>Manage application users</p>
+        </div>
+        <div>
+            <ul class="breadcrumb">
+                <li><i class="fa fa-home fa-lg"></i></li>
+                <li><a href="/admin/users">users</a></li>
+            </ul>
+        </div>
     </div>
-    <div class="clearfix" style="margin-top: 10px"></div>
+    <div class="row">
+        <div class="col-md-12">
+            <div class="card">
+                <h3 class="card-title">Edit User</h3>
 
-    <form action="" method="post" v-on:submit.prevent="save">
 
-        <input type="hidden" name="id" value="" v-model="user.id" />
-
-        <div class="row">
-            <div class="col-md-8">
-
-                <div class="form-group">
-                    <label>Username</label>
-                    <input class="form-control" 
-                           v-model="user.username"
-                           type="text" name="username" value="" />
+                <div class="pull-right">
+                    <button v-bind:disabled="processing"
+                            v-on:click="save"
+                            class="btn btn-primary btn-sm">Save
+                    </button>
+                    <a class="btn btn-warning btn-sm" href="/admin/users">Back</a>
                 </div>
+                <div class="clearfix" style="margin-top: 10px"></div>
 
-                <div class="form-group">
-                    <label>Email</label>
-                    <input class="form-control" 
-                           v-model="user.email"
-                           type="text" name="email" value="" />
-                </div>
+                <form action="" method="post" v-on:submit.prevent="save">
 
-                <div class="form-group">
-                    <label>Password</label>
-                    <input class="form-control" 
-                           v-model="user.password"
-                           type="password" name="password" value="" />
-                </div>
+                    <input type="hidden" name="id" value="" v-model="user.id" />
 
-                <div class="form-group">
-                    <label>Confirm Password</label>
-                    <input class="form-control" 
-                           v-model="user.password_confirm"
-                           type="password" name="password_confirm" value="" />
-                </div>
-            </div>
-            <div class="col-md-4">
+                    <div class="row">
+                        <div class="col-md-8">
 
-                <label>Avatar</label>
-                <div class="clearfix"></div>
-                <div class="btn-group">
-                    <label class="btn btn-default btn-file">
-                        Browse Image
-                        <input type="file" name="image_upload" 
-                               v-on:change="selectImage"
-                               style="display: none;">
-                    </label>
-                    <button class="btn btn-danger" v-show="user.image || user.image_upload" 
-                            v-on:click.prevent="removeImage">Remove image</button>
-                </div>
-                <div v-show="getAvatarUrl">
-                    <img class="thumbnail" v-bind:src="getAvatarUrl" />
-                </div>
-                <div v-show="user.image_upload">
-                    <img class="thumbnail" v-bind:src="user.image_upload" />
-                </div>
-                <input type="hidden" name="image" v-model="user.image" />
+                            <div class="form-group">
+                                <label>Username</label>
+                                <input class="form-control" 
+                                       v-model="user.username"
+                                       type="text" name="username" value="" />
+                            </div>
 
+                            <div class="form-group">
+                                <label>Email</label>
+                                <input class="form-control" 
+                                       v-model="user.email"
+                                       type="text" name="email" value="" />
+                            </div>
+
+                            <div class="form-group">
+                                <label>Password</label>
+                                <input class="form-control" 
+                                       v-model="user.password"
+                                       type="password" name="password" value="" />
+                            </div>
+
+                            <div class="form-group">
+                                <label>Confirm Password</label>
+                                <input class="form-control" 
+                                       v-model="user.password_confirm"
+                                       type="password" name="password_confirm" value="" />
+                            </div>
+                        </div>
+                        <div class="col-md-4">
+
+                            <label>Avatar</label>
+                            <div class="clearfix"></div>
+                            <div class="btn-group">
+                                <label class="btn btn-default btn-file">
+                                    Browse Image
+                                    <input type="file" name="image_upload" 
+                                           v-on:change="selectImage"
+                                           style="display: none;">
+                                </label>
+                                <button class="btn btn-danger" v-show="user.image || user.image_upload" 
+                                        v-on:click.prevent="removeImage">Remove image</button>
+                            </div>
+                            <div v-show="getAvatarUrl">
+                                <img class="thumbnail" v-bind:src="getAvatarUrl" />
+                            </div>
+                            <div v-show="user.image_upload">
+                                <img class="thumbnail" v-bind:src="user.image_upload" />
+                            </div>
+                            <input type="hidden" name="image" v-model="user.image" />
+
+                        </div>
+                    </div>
+                    <div class="clearfix" style="margin-top: 10px"></div>
+
+                    <div class="alert alert-success" v-show="success" v-cloak>Saved</div>
+                    <div class="alert alert-danger" v-show="error" v-text="error" v-cloak></div>
+
+                    <button type="submit" 
+                            v-bind:disabled="processing"
+                            class="btn btn-primary btn-sm">Save
+                    </button>
+                    <a class="btn btn-warning btn-sm" href="/admin/users">Back</a>
+                </form>
             </div>
         </div>
-        <div class="clearfix" style="margin-top: 10px"></div>
-
-        <div class="alert alert-success" v-show="success" v-cloak>Saved</div>
-        <div class="alert alert-danger" v-show="error" v-text="error" v-cloak></div>
-
-        <button type="submit" 
-                v-bind:disabled="processing"
-                class="btn btn-primary btn-sm">Save
-        </button>
-        <a class="btn btn-warning btn-sm" href="/admin/users">Back</a>
-    </form>
+    </div>
 </div>
 {{/partial }}
 
 {{#partial "scripts" }}
-<script src="/assets/js/jquery.min.js" type="text/javascript"></script>
-<script src="/assets/js/bootstrap.min.js" type="text/javascript"></script>
-<script src="/assets/js/vue.js"></script>
-<script src="/assets/js/vue-resource.js"></script>
-<script src="/assets/js/admin/users/form.js"></script>
+<script src="/assets/admin/js/users/form.js"></script>
 <script>
-    form.data.action = '/admin/users/save';
-    form.data.redirect = '/admin/users';
-    form.data.avatar_uri = '/avatar/';
-    form.data.user = {
-        id: '{{ user.id }}',
-        username: '{{ user.username }}',
-        email: '{{ user.email }}',
-        password: '',
-        image: '{{ user.image }}',
-        image_upload: ''
-    };
-    var vm = new Vue(form);
+form.data.action = '/admin/users/save';
+form.data.redirect = '/admin/users';
+form.data.avatar_uri = '/avatar/';
+form.data.user = {
+    id: '{{ user.id }}',
+    username: '{{ user.username }}',
+    email: '{{ user.email }}',
+    password: '',
+    image: '{{ user.image }}',
+    image_upload: ''
+};
+var vm = new Vue(form);
 </script>
 {{/partial }}
 {{> layout }}
