--- a/resources/views/auth/login.html
+++ b/resources/views/auth/login.html
@@ -5,9 +5,9 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         
-        <link href="/assets/favicon.ico" rel="shortcut icon">
-        <link href="/assets/css/bootstrap.min.css" rel="stylesheet" type="text/css" />
-        <link href="/assets/css/style.css" rel="stylesheet" type="text/css" />
+        <link href="/assets/default/favicon.ico" rel="shortcut icon">
+        <link href="/assets/default/css/bootstrap.min.css" rel="stylesheet" type="text/css" />
+        <link href="/assets/default/css/style.css" rel="stylesheet" type="text/css" />
 
     </head>
     <body>
@@ -46,10 +46,10 @@
             </form>
         </div>
         
-        <script src="/assets/js/jquery.min.js" type="text/javascript"></script>
-        <script src="/assets/js/bootstrap.min.js" type="text/javascript"></script>
-        <script src="/assets/js/vue.js"></script>
-        <script src="/assets/js/vue-resource.js"></script>
+        <script src="/assets/default/js/jquery.min.js" type="text/javascript"></script>
+        <script src="/assets/default/js/bootstrap.min.js" type="text/javascript"></script>
+        <script src="/assets/default/js/vue.js"></script>
+        <script src="/assets/default/js/vue-resource.js"></script>
         <script>
 
             var client = new Vue({
